# routes/api.php
@@ -16,3 +16,4 @@ use Illuminate\Support\Facades\Route;
 */
 
 Route::post('/register', [UserController::class, 'register']);
+Route::get('/getUser/{id}',[UserController::class,'getUser']);
